--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,17 @@ html,
 body {
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  /*noinspection CssInvalidPropertyValue*/
+  min-height: -webkit-fill-available;
 }
 
 #__next {
   height: 100vh;
+}
+
+html {
+  /*noinspection CssInvalidPropertyValue*/
+  height: -webkit-fill-available;
 }
