--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  min-height: 100vh;
-  /* mobile viewport bug fix */
-  /*noinspection CssInvalidPropertyValue*/
-  min-height: -webkit-fill-available;
+  height: 100vh;
 }
 
 #__next {
   height: 100vh;
-}
-
-html {
-  /*noinspection CssInvalidPropertyValue*/
-  height: -webkit-fill-available;
 }
